--- a/_posts/2023/06/2023-06-27-.md
+++ b/_posts/2023/06/2023-06-27-.md
@@ -59,3 +59,8 @@
 このコメントは何時に投稿されましたか？
 
 > 6:55 PM · Jun 30, 2023 (GMT+9)
+
+# issue からこんにちはです
+このコメントは何時に投稿されましたか？
+
+> 6:55 PM · Jun 30, 2023 (GMT+9)
