--- a/sleep/2024/03/2024-03-28-.md
+++ b/sleep/2024/03/2024-03-28-.md
@@ -1,12 +1,12 @@
 ---
 id: 200
 title: "睡眠記録"
-assignees: <[
+assignees: [
   "noraworld"
-]>
-labels: <[
+]
+labels: [
   "done"
-]>
+]
 created_at: 8:02 AM · Mar 29, 2024 (GMT+9)
 ---
 
