Update howdy file

--- a/_posts/2025-03-27-howdy.md
+++ b/_posts/2025-03-27-howdy.md
@@ -3,4 +3,19 @@ layout: post
 title: howdy?
 ---
 
-howdy?
+# howdy?
+| can | you |
+| --- | --- |
+| see | it? |
+
+[hello | world](https://example.com)
+
+https://example.com
+
+<details>
+<summary></summary>
+
+| can | you |
+| --- | --- |
+| see | it? |
+</details>
