Translate post: _posts/ja/2025/06/2025-06-24-world.md → _posts/en/2025/06/2025-06-24-world.md

--- a/_posts/en/2025/06/2025-06-24-world.md
+++ b/_posts/en/2025/06/2025-06-24-world.md
@@ -11,4 +11,4 @@ tags: []
 published: true
 ---
 
-Good evening. This is goodbye. What is Missouri? Updated here too. Here as well. I hadn't checked out.
+Good evening. This is goodbye. What is Missouri? Updating here too. Here as well. I had not checked out.
