Translate post: _posts/ja/2025/06/2025-06-25-hello.md → _posts/en/2025/06/2025-06-25-hello.md

--- a/_posts/en/2025/06/2025-06-25-hello.md
+++ b/_posts/en/2025/06/2025-06-25-hello.md
@@ -11,4 +11,4 @@ tags: []
 published: true
 ---
 
-Hello. This is a test. I made a mistake, so I updated it. I made another mistake, so I updated it again. I believe it will work perfectly this time. How many times is the charm now?
+Hello. This is a test. I made a mistake, so I updated it. Updated again due to another mistake. I believe it will work this time. How many times has it taken to get it right?
